--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
             <button type="button" class="close" title="Close">&times;</button>
         </h4>
         <div class="wrapper">
-            <div class="colHeader"><div class="col1">Date</div><div class="col2">Description</div><div class="col3">Floor</div></div>
+            <div class="colHeader"><div class="col1">Date</div><div class="col2">Description</div><div class="col3">Floor</div><div class="col4"></div></div>
             <div class="alertsList"></div>
             <div class="paginationDiv">
                 <div class="text">1-2 of 2</div>
