--- a/public/microservices/wrld3d/powerMockup.html
+++ b/public/microservices/wrld3d/powerMockup.html
@@ -2,15 +2,11 @@
 <html>
 	<head>
 		<link href="/ui/vendors/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	
-		<!-- bootstrap-daterangepicker -->
 		<link href="/ui/vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 		<link href="/ui/vendors/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet">
-
 		<link href="/ui/vendors/amcharts/amcharts/plugins/export/export.css" rel="stylesheet" type="text/css" media="all" />
         <link href="/ui/vendors/font-awesome-5/css/fontawesome-all.min.css" rel="stylesheet" type="text/css" media="all" />
 		<link href="/ui/assets/bootstrap-gentelella-theme-for-widgets.css" rel="stylesheet">
-        <!-- datatables select css -->
         <link href="/ui/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet" />  
         <link href="https://cdn.datatables.net/v/dt/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.4.0/b-colvis-1.4.0/b-flash-1.4.0/b-html5-1.4.0/b-print-1.4.0/r-2.1.1/sc-1.4.2/datatables.min.css" rel="stylesheet" type="text/css" />
         <link href="/ui/vendors/bootstrap/dist/css/less/pagination.less" rel="stylesheet" />
@@ -65,25 +61,22 @@
 						<!-- <span class="count_top"><i class="fa fa-user"></i> Total Users</span> -->
 						<span class="count_top"></i>Total Usage</span>
 						<div class="count green">3,700 <span>kWh</span></div>
-						<span class="count_bottom"><i class="red"><i class="fa fa-sort-asc"></i>34% </i>WoW</span>
+						<span class="count_bottom"><i class="red"><i class="fas fa-sort-up"></i>34% </i>WoW</span>
 					</div>
 					<div class="kpi">
-						<!-- <span class="count_top"><i class="fa fa-user"></i> Total Users</span> -->
 						<span class="count_top"></i> Total Lighting</span>
 						<div class="count green">1,500 <span>kWh</span></div>
-						<span class="count_bottom"><i class="red"><i class="fa fa-sort-asc"></i>24% </i>WoW</span>
+						<span class="count_bottom"><i class="red"><i class="fas fa-sort-up"></i>24% </i>WoW</span>
 					</div>
 					<div class="kpi">
-						<!-- <span class="count_top"><i class="fa fa-user"></i> Total Users</span> -->
 						<span class="count_top"></i> Total HVAC</span>
 						<div class="count green">1,000 <span>kWh</span></div>
-						<span class="count_bottom"><i class="green"><i class="fa fa-sort-desc"></i>20% </i>WoW</span>
+						<span class="count_bottom"><i class="green"><i class="fas fa-sort-down"></i>20% </i>WoW</span>
 					</div>
 					<div class="kpi">
-						<!-- <span class="count_top"><i class="fa fa-user"></i> Total Users</span> -->
 						<span class="count_top"></i> Total Sockets</span>
 						<div class="count green">1,200 <span>kWh</span></div>
-						<span class="count_bottom"><i class="green"><i class="fa fa-sort-desc"></i>14% </i>WoW</span>
+						<span class="count_bottom"><i class="green"><i class="fas fa-sort-down"></i>14% </i>WoW</span>
 					</div>
 				</div>
 			</div>
@@ -103,7 +96,6 @@
         <script src="/ui/vendors/underscore/underscore-min.js"></script>
         <!-- <script src="/ui/vendors/jquery/3.2.1/jquery.min.js"></script> -->
 		<script src="/ui/vendors/jquery/2.2.4/jquery.min.js"></script>
-        <!-- <script src="/ui/assets/widget-utilities.js"></script> -->
         <script src="/ui/assets/templates/amcharts-connecthing-theme.js"></script>
         <script src="/ui/assets/templates/amcharts-connecthing-widgets.js"></script>
 		<script src="/ui/vendors/bootstrap/3.3.7/js/bootstrap.min.js"></script>
