--- a/public/microservices/wrld3d/signMockup.html
+++ b/public/microservices/wrld3d/signMockup.html
@@ -13,39 +13,45 @@
         <link href="/ui/vendors/bootstrap/dist/css/less/pagination.less" rel="stylesheet" />
         <link href="/ui/css/custom.min.css" rel="stylesheet" />
         <link href="/ui/css/davra.css" rel="stylesheet" />
-		<link href="/microservices/wrld3d/css/badgeMockup.css" rel="stylesheet"/>
+		<link href="/microservices/wrld3d/css/signMockup.css" rel="stylesheet"/>
 	</head>
 	<body style="background: #FFFFFF">
 		<div class="meeting-room-overview">
-			<div class="meeting-room-photo"><img height="160px"></div>
+			<!-- <div class="meeting-room-photo"><img width="160px"></div> -->
+			<div class="meeting-room-photo">
+				<div id="screen-carousel" class="carousel slide" data-ride="carousel" data-interval="4000">
+					<!-- <ol class="carousel-indicators">
+					  	<li data-target="#screen-carousel" data-slide-to="0" class="active"></li>
+					  	<li data-target="#screen-carousel" data-slide-to="1"></li>
+					</ol> -->
+					<div class="carousel-inner" role="listbox">
+					  	<div class="item active">
+							<img class="img1">
+							<div class="carousel-caption"></div>
+					  	</div>
+					  	<div class="item">
+							<img class="img2">
+							<div class="carousel-caption"></div>
+					  	</div>
+					</div>
+					<!-- <a class="left carousel-control" href="#screen-carousel" role="button" data-slide="prev">
+					  	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					  	<span class="sr-only">Previous</span>
+					</a> -->
+					<!-- <a class="right carousel-control" href="#screen-carousel" role="button" data-slide="next">
+					  	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					  	<span class="sr-only">Next</span>
+					</a> -->
+				</div>
+			</div>
 			<div class="meeting-room-details-wrapper">
 				<div class="meeting-room-details">
 					<div class="status-icon"><i class="fas fa-eye"></i></div>
-					<div class="status">Status: <span class="online">ONLINE</span></div>
+					<div class="status">Status: <span></span></div>
 				</div>
 				<div class="meeting-room-details">
-					<div class="address-icon"><i class="fas fa-wrench"></i></div>
-					<div class="address">Capabilities:</div>		
-				</div>
-				<div class="meeting-room-details indent">
-					<div class="address-icon finger"><i></i></div>
-					<div class="address">Finger</div>		
-				</div>
-				<div class="meeting-room-details indent">
-					<div class="address-icon face"><i></i></div>
-					<div class="address">Face</div>		
-				</div>
-				<div class="meeting-room-details indent">
-					<div class="address-icon wifi"><i></i></div>
-					<div class="address">WiFi</div>		
-				</div>
-				<div class="meeting-room-details indent">
-					<div class="address-icon display"><i></i></div>
-					<div class="address">Display</div>		
-				</div>
-				<div class="meeting-room-details indent">
-					<div class="address-icon keypad"><i></i></div>
-					<div class="address">Keypad</div>		
+					<div class="sync-icon"><i class="fas fa-wrench"></i></div>
+					<div class="sync">Sync: <span></span></div>		
 				</div>
 			</div>
 		</div>
@@ -53,7 +59,7 @@
 		<div class="recordHeading">
 			<ul class="tabbedMenu nav nav-tabs" role="tablist">
 				<li class="active" role="presentation">
-					<a class="tabOccupancy" href="#tabOccupancyPanel" role="tab" data-toggle="tab"><span>Utilisation</span></a>
+					<a class="tabCards" href="#tabCardsPanel" role="tab" data-toggle="tab"><span>Cards</span></a>
 				</li>
 				<li role="presentation">
 					<a class="tabUptime" href="#tabUptimePanel" role="tab" data-toggle="tab"><span>Uptime</span></a>
@@ -64,11 +70,11 @@
 			</ul>
 		</div>
 		<div class="tab-content">
-			<div role="tabpanel" class="tab-pane fade in active" id="tabOccupancyPanel">
-				<div id="chartOccupancy"></div>
+			<div role="tabpanel" class="tab-pane fade in active" id="tabCardsPanel">
+				<div id="chartCards" style="width: 1px; height: 1px; max-height: 320px;"></div>
 			</div>
 			<div role="tabpanel" class="tab-pane fade" id="tabUptimePanel">
-				<div id="chartdiv" style="width: 1px; height: 1px; max-height: 240px;"></div>
+				<div id="chartUptime" style="width: 1px; height: 1px; max-height: 240px;"></div>
 			</div>
 			<div role="tabpanel" class="tab-pane fade" id="tabEventsPanel">
 				<div class="table-container">
@@ -84,7 +90,7 @@
 		<!-- <script src="/ui/vendors/jquery/3.2.1/jquery.min.js"></script> -->
 		<script src="/ui/vendors/jquery/2.2.4/jquery.min.js"></script>
 		<script src="/ui/vendors/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="/ui/vendors/d3/d3.v3.js"></script>
+		<!-- <script src="/ui/vendors/d3/d3.v3.js"></script> -->
 		<script src="/ui/vendors/moment/min/moment.min.js"></script>
 		<script src="/ui/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 		<script src="/ui/assets/bootstrap-gentelella-theme-for-widgets.js"></script>
@@ -94,6 +100,6 @@
         <script src="https://cdn.datatables.net/v/dt/dt-1.10.15/datatables.min.js"></script>
         <script src="https://cdn.datatables.net/v/dt/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.4.0/b-colvis-1.4.0/b-flash-1.4.0/b-html5-1.4.0/b-print-1.4.0/r-2.1.1/sc-1.4.2/datatables.min.js"></script>
         <script src="/ui/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
-		<script src="/microservices/wrld3d/js/badgeMockup.js"></script>
+		<script src="/microservices/wrld3d/js/signMockup.js"></script>
 	</body>
 </html>
