--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
     <script src="https://cdn-webgl.wrld3d.com/wrldjs/addons/indoor_control/latest/indoor_control.js"></script>
     <script src="https://cdn-webgl.wrld3d.com/wrldjs/addons/compass_control/latest/compass_control.js"></script>
     <script src="https://cdn-webgl.wrld3d.com/wrldjs/addons/marker_controller/latest/marker_controller.js"></script>
+    <script src="/ui/vendors/amcharts/amcharts/amcharts.js"></script>  
+    <script src="/ui/vendors/amcharts/amcharts/gauge.js"></script>  
+    <script src="/ui/vendors/amcharts/amcharts/plugins/export/export.min.js"></script>
+    <link href="/ui/vendors/amcharts/amcharts/plugins/export/export.css" rel="stylesheet" type="text/css" media="all" />
     <script src="/microservices/wrld3d/js/wrld3d.js"></script>
     <link href="/microservices/wrld3d/css/wrld3d.css" rel="stylesheet"/>
 </head>
@@ -32,7 +36,14 @@
         <button class="ripple-button tilt-button" data-mode="3d">2D</button>
     </div> -->
     <div class="action-buttons">
-        <button type="button" class="alertButton"><img src="/microservices/wrld3d/img/bell.svg" alt="Bell image"/><div class="alertsCount badge bg-red">2</div></button>
+        <button type="button" class="alertButton" title="Show/hide alerts"><img src="/microservices/wrld3d/img/bell.svg" alt="Bell image"/><div class="alertsCount badge bg-red">2</div></button>
+        <button type="button" class="aqiButton" title="Drill in dashboard coming soon..."><div id="aqiGauge"></div><div class="aqiTitle">AQI</div></button>
+        <button type="button" class="comfortButton" title="Drill in dashboard coming soon..."><div id="comfortGauge"></div>
+            <div class="comfortTitle">Comfort Index</div>
+            <div class="comfortTemperature"></div>
+            <div class="comfortHumidity"></div>
+        </button>
+        <button type="button" class="powerButton" title="Drill in dashboard coming soon..."><div id="powerGauge"></div><div class="powerTitle">kWh/m2/year</div></button>
     </div>
     <div id="indoor-container"></div>
     <div id="compass-container"></div>
