--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="https://cdn-webgl.wrld3d.com/wrldjs/addons/routeview/latest/routeview.js"></script>
     <script src="/ui/vendors/amcharts/amcharts/amcharts.js"></script>  
     <script src="/ui/vendors/amcharts/amcharts/gauge.js"></script>  
+    <script src="/ui/vendors/amcharts/amcharts/serial.js"></script>
     <script src="/ui/vendors/amcharts/amcharts/plugins/export/export.min.js"></script>
     <link href="/ui/vendors/amcharts/amcharts/plugins/export/export.css" rel="stylesheet" type="text/css" media="all" />
     <script src="/microservices/wrld3d/js/wrld3d.js"></script>
@@ -44,6 +45,7 @@
             <div class="comfortHumidity"></div>
         </button>
         <button type="button" class="powerButton" title="Drill in dashboard coming soon..."><div id="powerGauge"></div><div class="powerTitle">kWh/m2/year</div></button>
+        <button type="button" class="assetButton" title="Drill in dashboard coming soon..."><div id="assetGauge"></div><div class="assetTitle">Asset/Room Use</div></button>
     </div>
     <div id="indoor-container" class="wrld-widget-container"></div>
     <div id="navigation-container" style="position: absolute; left: 0px; right: 0px; top: 117px; bottom: 0px; overflow: hidden;"></div>
