--- a/public/microservices/wrld3d/airMockup.html
+++ b/public/microservices/wrld3d/airMockup.html
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 		</div>
-        <div id="chartdiv" style="width: 1px; height: 1px; max-height: 200px;"></div>
+        <div id="chartAqi" style="width: 1px; height: 1px; max-height: 200px;"></div>
 
         <script src="/ui/vendors/amcharts/amcharts/amcharts.js"></script>  
         <script src="/ui/vendors/amcharts/amcharts/serial.js"></script>
