--- a/public/microservices/wrld3d/deskMockup.html
+++ b/public/microservices/wrld3d/deskMockup.html
@@ -48,7 +48,7 @@
 				<div id="chartOccupancy"></div>
 			</div>
 			<div role="tabpanel" class="tab-pane fade" id="tabUptimePanel">
-				<div id="chartdiv" style="width: 1px; height: 1px; max-height: 240px;"></div>
+				<div id="chartUptime" style="width: 1px; height: 1px; max-height: 240px;"></div>
 			</div>
 			<div role="tabpanel" class="tab-pane fade" id="tabEventsPanel">
 				<div class="table-container">
