--- a/public/microservices/wrld3d/powerMockup.html
+++ b/public/microservices/wrld3d/powerMockup.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</div>
-        <div id="chartdiv" style="width: 1px; height: 1px; max-height: 250px;"></div>
+        <div id="chartUsage" style="width: 1px; height: 1px; max-height: 250px;"></div>
 
         <hr class="widget-header-hr" />
         <div class="widget-header">Events</div>
@@ -68,7 +68,7 @@
 		<script src="/ui/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
 		<script src="/ui/vendors/moment/min/moment.min.js"></script>
 		<script src="/ui/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-		<script src="/ui/assets/bootstrap-gentelella-theme-for-widgets.js"></script>
+		<!-- <script src="/ui/assets/bootstrap-gentelella-theme-for-widgets.js"></script> -->
 		<script src="/ui/assets/widget-utilities.js"></script>
         <script src="https://cdn.datatables.net/v/dt/dt-1.10.15/datatables.min.js"></script>
         <script src="https://cdn.datatables.net/v/dt/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.4.0/b-colvis-1.4.0/b-flash-1.4.0/b-html5-1.4.0/b-print-1.4.0/r-2.1.1/sc-1.4.2/datatables.min.js"></script>
