--- a/public/microservices/wrld3d/airMockup.html
+++ b/public/microservices/wrld3d/airMockup.html
@@ -52,6 +52,7 @@
 		<script src="/ui/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 		<script src="/ui/assets/bootstrap-gentelella-theme-for-widgets.js"></script>
 		<script src="/ui/assets/widget-utilities.js"></script>
+		<script src="/microservices/wrld3d/js/utils.js"></script>
 		<script src="/microservices/wrld3d/js/airMockup.js"></script>
 	</body>
 </html>
