--- a/public/microservices/wrld3d/fireMockup.html
+++ b/public/microservices/wrld3d/fireMockup.html
@@ -104,6 +104,7 @@
         <script src="https://cdn.datatables.net/v/dt/dt-1.10.15/datatables.min.js"></script>
         <script src="https://cdn.datatables.net/v/dt/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.4.0/b-colvis-1.4.0/b-flash-1.4.0/b-html5-1.4.0/b-print-1.4.0/r-2.1.1/sc-1.4.2/datatables.min.js"></script>
         <script src="/ui/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
+		<script src="/microservices/wrld3d/js/utils.js"></script>
 		<script src="/microservices/wrld3d/js/fireMockup.js"></script>
 	</body>
 </html>
