--- a/public/microservices/wrld3d/hayyak.html
+++ b/public/microservices/wrld3d/hayyak.html
@@ -20,8 +20,8 @@
 			<div class="meeting-room-photo"><img height="160px"></div>
 			<div class="meeting-room-details-wrapper">
 				<div class="meeting-room-details">
-					<div class="phone-icon"><i class="fas fa-phone"></i></div>
-					<div class="phone-number">+96 6920 209 467</div>
+					<div class="status-icon"><i class="fas fa-eye"></i></div>
+					<div class="status">Status: <span>ONLINE</span></div>
 				</div>
 				<div class="meeting-room-details">
 					<div class="address-icon"><i class="fas fa-home"></i></div>
