--- a/public/microservices/wrld3d/sign.html
+++ b/public/microservices/wrld3d/sign.html
@@ -68,7 +68,7 @@
 					<a class="tabUptime" href="#tabUptimePanel" role="tab" data-toggle="tab"><span>Uptime</span></a>
 				</li>
 				<li role="presentation">
-					<a class="tabEvents" href="#tabEventsPanel" role="tab" data-toggle="tab"><span>Outages</span></a>
+					<a class="tabEvents" href="#tabEventsPanel" role="tab" data-toggle="tab"><span>Incidents</span></a>
 				</li>
 			</ul>
 		</div>
