--- a/public/microservices/wrld3d/door.html
+++ b/public/microservices/wrld3d/door.html
@@ -53,13 +53,16 @@
 		<div class="recordHeading">
 			<ul class="tabbedMenu nav nav-tabs" role="tablist">
 				<li class="active" role="presentation">
-					<a class="tabOccupancy" href="#tabOccupancyPanel" role="tab" data-toggle="tab"><span>Utilisation</span></a>
+					<a class="tabOccupancy" href="#tabOccupancyPanel" role="tab" data-toggle="tab"><span>Usage</span></a>
 				</li>
 				<li role="presentation">
 					<a class="tabUptime" href="#tabUptimePanel" role="tab" data-toggle="tab"><span>Uptime</span></a>
 				</li>
 				<li role="presentation">
-					<a class="tabEvents" href="#tabEventsPanel" role="tab" data-toggle="tab"><span>Incidents</span></a>
+					<a class="tabEvents" href="#tabEventsPanel" role="tab" data-toggle="tab"><span>Outage</span></a>
+				</li>
+				<li role="presentation">
+					<a class="tabAnomaly" href="#tabAnomalyPanel" role="tab" data-toggle="tab"><span>Signature</span></a>
 				</li>
 			</ul>
 		</div>
@@ -76,8 +79,37 @@
 				</div>
 				<div class="modal" id="loading-mask">Loading ... </div>
 			</div>
+			<div role="tabpanel" class="tab-pane fade" id="tabAnomalyPanel">
+				<div id="chartAnomaly" style="max-height: 240px;"></div>
+				<div id="point_details" style="margin-left: 10px; margin-right: 10px">
+                    <div style="text-align:center;font-style:italic;" id="point_details_header" class="hide">
+                        <!-- Click a point on the asset's digital signature above for more information -->
+                    </div>
+                    <!-- <strong>Datasources</strong> -->
+                    <div id="point_details_info" style="font-size: 11px"></div>
+				</div>
+			</div>
 		</div>
-        <script src="/ui/vendors/amcharts/amcharts/amcharts.js"></script>  
+		<div id="modalDatasource" class="modal fade" role="dialog" tabindex="-1">
+			<div class="modal-dialog">
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="form-horizontal form-label-left">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+							<h4 class="modal-title"></h4>
+						</div>
+						<div class="modal-body" style="margin-bottom: 0px; padding-bottom: 0px;min-height:200px;">
+	
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-default pull-right" data-dismiss="modal"> Close </button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script src="/ui/vendors/amcharts/amcharts/amcharts.js"></script>  
         <script src="/ui/vendors/amcharts/amcharts/serial.js"></script>
         <script src="/ui/vendors/amcharts/amcharts/plugins/export/export.min.js"></script>
 		<script src="/ui/vendors/underscore/underscore-min.js"></script>
@@ -94,6 +126,7 @@
         <script src="https://cdn.datatables.net/v/dt/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/b-1.4.0/b-colvis-1.4.0/b-flash-1.4.0/b-html5-1.4.0/b-print-1.4.0/r-2.1.1/sc-1.4.2/datatables.min.js"></script>
         <script src="/ui/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
 		<script src="/microservices/wrld3d/js/utils.js"></script>
+		<script src="/microservices/wrld3d/js/digitalSignature.js"></script>
 		<script src="/microservices/wrld3d/js/door.js"></script>
 	</body>
 </html>
