Add wide classes

--- a/public/microservices/wrld3d/sign.html
+++ b/public/microservices/wrld3d/sign.html
@@ -59,7 +59,7 @@
 		<div class="recordHeading">
 			<ul class="tabbedMenu nav nav-tabs" role="tablist">
 				<li class="active" role="presentation">
-					<a class="tabProps" href="#tabPropsPanel" role="tab" data-toggle="tab"><span>Properties</span></a>
+					<a class="tabProps" href="#tabPropsPanel" role="tab" data-toggle="tab"><span>Specs</span></a>
 				</li>
 				<li role="presentation" style="display: none;">
 					<a class="tabCards" href="#tabCardsPanel" role="tab" data-toggle="tab"><span>Cards</span></a>
