Add stateful incidents

--- a/public/microservices/wrld3d/sign.html
+++ b/public/microservices/wrld3d/sign.html
@@ -71,7 +71,7 @@
 					<a class="tabEvents" href="#tabEventsPanel" role="tab" data-toggle="tab"><span>Outage</span></a>
 				</li>
 				<li role="presentation">
-					<a class="tabAnomaly" href="#tabAnomalyPanel" role="tab" data-toggle="tab"><span>Signature</span></a>
+					<a class="tabAnomaly" href="#tabAnomalyPanel" role="tab" data-toggle="tab"><span>Digital Signature</span></a>
 				</li>
 			</ul>
 		</div>
