--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,14 @@
     <div id="alertsDiv">
         <h4 class="divToggle">
             <span>Alerts</span>
-            <span class="alertsCount badge bg-red">2</span>
-            <button type="button" class="export kiwi" title="Export alerts"><i class="fal fa-download"></i>
-            </button>
+            <span class="alertsCount badge bg-red">0</span>
+            <button type="button" class="open kiwi" title="Show all alerts">Show all</button>
+            <button type="button" class="export kiwi" title="Export alerts"><i class="fal fa-download"></i></button>
             <button type="button" class="close" title="Close">&times;</button>
         </h4>
         <div class="wrapper">
-            <div class="colHeader"><div class="col1">Date</div><div class="col2">Description</div><div class="col3">Floor</div><div class="col4"></div></div>
+            <!-- <div class="colHeader"><div class="col1">Reported</div><div class="col2">Acknowledged</div><div class="col3">Description</div><div class="col4">Floor</div><div class="col5">Acknowledge</div></div> -->
+            <div class="colHeader"><div class="col1">Reported</div><div class="col2">Acknowledged</div><div class="col3">Description</div><div class="col4">Acknowledge</div></div>
             <div class="alertsList"></div>
             <div class="paginationDiv">
                 <div class="text">1-2 of 2</div>
