--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         </h4>
         <div class="wrapper">
             <!-- <div class="colHeader"><div class="col1">Reported</div><div class="col2">Acknowledged</div><div class="col3">Description</div><div class="col4">Floor</div><div class="col5">Acknowledge</div></div> -->
-            <div class="colHeader"><div class="col1">Reported</div><div class="col2">Acknowledged</div><div class="col3">Description</div><div class="col4">Acknowledge</div></div>
+            <div class="colHeader"><div class="col1">Reported</div><div class="col2">Resolved</div><div class="col3">Acknowledged</div><div class="col4">Description</div><div class="col5">Acknowledge</div></div>
             <div class="alertsList"></div>
             <div class="paginationDiv">
                 <div class="text">1-2 of 2</div>
