--- a/public/microservices/wrld3d/door.html
+++ b/public/microservices/wrld3d/door.html
@@ -81,7 +81,7 @@
 			</div>
 			<div role="tabpanel" class="tab-pane fade" id="tabAnomalyPanel">
 				<div id="chartAnomaly" style="max-height: 240px;"></div>
-				<div id="point_details" style="margin-left: 10px; margin-right: 10px">
+				<div id="point_details" style="margin-left: 10px; margin-right: 10px; overflow: auto; height: 140px;">
                     <div style="text-align:center;font-style:italic;" id="point_details_header" class="hide">
                         <!-- Click a point on the asset's digital signature above for more information -->
                     </div>
