--- a/public/microservices/wrld3d/deskMockup.html
+++ b/public/microservices/wrld3d/deskMockup.html
@@ -44,7 +44,8 @@
 			</ul>
 		</div>
 		<div class="tab-content">
-			<div role="tabpanel" class="tab-pane fade in active" id="tabOccupancyPanel">
+			<div role="tabpanel" class="tab-pane fade in active" id="tabOccupancyPanel" style="position:relative">
+				<button type="button" class="allHours" title="Show all hours" style="position:absolute; top:2px;"><i class="fas fa-expand"></i></button>
 				<div id="chartOccupancy"></div>
 			</div>
 			<div role="tabpanel" class="tab-pane fade" id="tabUptimePanel">
