--- a/public/microservices/wrld3d/hayyak.html
+++ b/public/microservices/wrld3d/hayyak.html
@@ -53,7 +53,8 @@
 			<div role="tabpanel" class="tab-pane fade in active" id="tabMetricsPanel">
 				<div id="chartMetrics" style="max-height: 250px;"></div>
 			</div>
-			<div role="tabpanel" class="tab-pane fade" id="tabOccupancyPanel">
+			<div role="tabpanel" class="tab-pane fade" id="tabOccupancyPanel" style="position:relative">
+				<button type="button" class="allHours" title="Show all hours" style="position:absolute; top:2px;"><i class="fas fa-expand"></i></button>
 				<div id="chartOccupancy"></div>
 			</div>
 			<div role="tabpanel" class="tab-pane fade" id="tabUptimePanel">
